fixed logo spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,13 +60,13 @@ a:hover {
 	float: left;
 	margin-right: 10px;
 	font-family: Varela Round, Helvetica, arial, sans-serif;
-	font-size: 2em;
+	font-size: 1.5em;
 	font-weight: 800;
 	color: #000;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	line-height: 1.2em;
-	padding-top: 9px;
+	padding-top: 15px;
 	font-weight: bold;
 }
 
